[tool.poetry]
name = "rssi"
version = "0.1.0"
description = "This Python program utilizes Wi-Fi signal strengths (RSSI) to estimate the distance from nearby access points"
authors = ["Danial Samadi <danisamadi11@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
